--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "acorn": "^6.0.4",
     "bcryptjs": "^2.4.3",
+    "clean-css": "^4.2.1",
+    "constantinople": "^3.1.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "eslint-config-myconfig": "^0.2.0",
     "express": "~4.16.0",
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
@@ -18,8 +21,7 @@
     "jsonwebtoken": "^8.4.0",
     "morgan": "~1.9.0",
     "mysql": "github:mysqljs/mysql",
-    "passport": "^0.4.0",
-    "eslint-config-myconfig": "^0.2.0"
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "eslint": "^5.11.1",
